--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@
     padding: 0;
     margin: 0;
 }
+/* there are a variables but i used its values instead the var names because there is something in my mind i wanna try*/
 body {
     font-family: "Sora", sans-serif;
-    background: var(--bg-clr);
+    background: #FAFAF9;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -28,7 +29,7 @@ body {
     width: 368px;
     padding: 16px 16px 20px;
     background: #ffffff;
-    box-shadow: var(--box-shadow);
+    box-shadow: 0px 30px 100px 0px rgba(17, 23, 41, 0.05);
     border-radius: 16px;
     display: flex;
     flex-flow: column;
@@ -40,23 +41,23 @@ body {
     }
 
     .design {
-        color: var(--d-clr);
-        background: var(--d-bg-clr);
+        color: #883AE1;
+        background: #E6D6FC;
         width: fit-content;
         padding: 6px 16px ;
         border-radius: 15px;
-        font-size: var(--tag-f-size);
+        font-size: .625rem;
         font-weight: 600;
     }
 
     h2 {
-        font-size: var(--title-f-size);
-        color: var(--title-clr);
+        font-size: 1.125rem;
+        color: #20293A;
     }
 
     & .info p {
-        color: var(--txt-clr);
-        font-size: var(--body-f-size);
+        color: #6C727F;
+        font-size: .875rem;
         margin: 6px 0 4px;
         line-height: 1.4rem;
     }
@@ -69,7 +70,7 @@ body {
 
     span {
         padding-top:8px;
-        color: var(--txt-clr);
-        font-size: var(--small-f-size);
+        color: #6C727F;
+        font-size: .75rem;
     }
 }
